[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rajan_screener"
version = "0.0.0"
authors = [
  { name="Rajan Bajaj", email="rajanbajajkota@gmail.com" },
]
description = "The rajan_screener package is a comprehensive toolkit designed for analyzing and visualizing stock market data from the screener.in."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rajanbajaj/rajan_screener"
Issues = "https://github.com/rajanbajaj/rajan_screener/issues"
